[package]
name = "fluidsim"
version = "0.1.0"
authors = ["Viraj Sinha <virajosinha@gmail.com>"]
edition = "2018"

[[bin]]
name = "fluidsim"

[dependencies]
piston = "0.42.0"
piston2d-graphics = "0.30.0"
pistoncore-glutin_window = "0.54.0"
piston2d-opengl_graphics = "0.59.0"
palette = "*"
flame = "*"
rand = "*"